# mcp-bing-webmaster

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md
src/mcp_bing_webmaster/: __init__.py  __main__.py  client.py  server.py
