[project]
name = "mcp-bing-webmaster"
version = "0.1.0"
description = "Read-only + URL submission MCP server for Bing Webmaster Tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akira Matsumoto" }]
keywords = ["mcp", "bing", "webmaster", "seo", "search-console"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-bing-webmaster = "mcp_bing_webmaster.__main__:main"

[project.urls]
Homepage = "https://github.com/AkiraMatsumoto-github/mcp-bing-webmaster"
Repository = "https://github.com/AkiraMatsumoto-github/mcp-bing-webmaster"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_bing_webmaster"]
